tests/baselines/reference/clodulesDerivedClasses.errors.txt
tests/cases/compiler/clodulesDerivedClasses.ts(9,7): error TS2418: Class static side 'typeof Path' incorrectly extends base class static side 'typeof Shape':
  Types of property 'Utils' are incompatible:
    Type 'typeof Utils' is not assignable to type 'typeof Utils':
      Property 'convert' is missing in type 'typeof Utils'.


==== tests/cases/compiler/clodulesDerivedClasses.ts (1 errors) ====
    class Shape {
        id: number;
    }
    
    module Shape.Utils {
        export function convert(): Shape { return null;}
    }
    
    class Path extends Shape {
          ~~~~
!!! error TS2418: Class static side 'typeof Path' incorrectly extends base class static side 'typeof Shape':
!!! error TS2418:   Types of property 'Utils' are incompatible:
!!! error TS2418:     Type 'typeof Utils' is not assignable to type 'typeof Utils':
!!! error TS2418:       Property 'convert' is missing in type 'typeof Utils'.
        name: string;
    
    }
    
    module Path.Utils {
        export function convert2(): Path {
            return null;
        }
    }
    
    
    
    